# opencti

./: .codecov.yml  .drone.yml  .gitignore  .gitmodules  .graphqlconfig  .grenrc.js  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .syft.yaml  .travis.yml  .yarnrc.yml  404.html  AUTHORS  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.odt  FE-Guide.md  Jenkinsfile  LICENSE  README.md  SECURITY.md  codecov.yml  export.json  generatelicenseconfig.json  index.html  knip.json  latest  nx.json  opencti.code-workspace  package.json  pyproject.toml  q  renovate.json  renovate.json5  requirements.txt  setup.cfg  setup.py  (+9 more)
client-python/: .drone.yml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .yamllint.yaml  Makefile  README.md  project.json  requirements.txt  setup.cfg  test-requirements.txt  test.json
client-python/.circleci/: config.yml
client-python/.github/: PULL_REQUEST_TEMPLATE.md
client-python/.github/ISSUE_TEMPLATE/: bug_report.md
client-python/.github/workflows/: auto-set-labels.yml  codeql-analysis.yml
client-python/benchmarks/: benchmark_amqp_listener_in_flight.py  benchmark_api_not_empty_list_short_circuit.py  benchmark_api_process_multiple_fields_dispatch.py  benchmark_api_process_multiple_loop_dispatch.py  benchmark_api_request_header_context.py  benchmark_attack_pattern_extension_reads.py  benchmark_attack_pattern_mitre_id_extension_read.py  benchmark_attack_pattern_order_extension_read.py  benchmark_attribute_in_extension_lookup.py  benchmark_batch_callback_drain.py  benchmark_bundle_dependency_dispatch_window.py  benchmark_bundle_publish_byte_chunking.py  benchmark_bundle_publish_chunking.py  benchmark_bundle_publish_connection_reuse.py  benchmark_bundle_publish_idle_heartbeat.py  benchmark_campaign_extension_reads.py  benchmark_case_incident_extension_reads.py  benchmark_case_insensitive_enum_lookup.py  benchmark_case_rfi_extension_reads.py  benchmark_case_rft_extension_reads.py  benchmark_channel_extension_reads.py  benchmark_compute_object_refs_number.py  benchmark_connector_request_context.py  benchmark_connector_state_roundtrip.py  benchmark_course_of_action_extension_reads.py  benchmark_course_of_action_mitre_id_extension_read.py  benchmark_data_component_extension_reads.py  benchmark_data_source_extension_reads.py  benchmark_directory_retention_cleanup.py  benchmark_entity_list_filter_logging.py  benchmark_entity_update_logging.py  benchmark_entity_upload_handle_lifetime.py  benchmark_event_extension_reads.py  benchmark_external_reference_import_cache.py  benchmark_feedback_extension_reads.py  benchmark_fetch_opencti_file_serialization.py  benchmark_grouping_extension_reads.py  benchmark_http_listener_event_loop.py  benchmark_identity_extension_reads.py  benchmark_incident_extension_reads.py  (+110 more)
client-python/docs/: conf.py  requirements.txt
client-python/docs/pycti/: pycti.api.opencti_api_connector.rst  pycti.api.opencti_api_job.rst  pycti.api.rst  pycti.connector.opencti_connector.rst  pycti.connector.opencti_connector_helper.rst  pycti.connector.rst  pycti.entities.opencti_capability.rst  pycti.entities.opencti_course_of_action.rst  pycti.entities.opencti_external_reference.rst  pycti.entities.opencti_group.rst  pycti.entities.opencti_identity.rst  pycti.entities.opencti_incident.rst  pycti.entities.opencti_indicator.rst  pycti.entities.opencti_intrusion_set.rst  pycti.entities.opencti_kill_chain_phase.rst  pycti.entities.opencti_malware.rst  pycti.entities.opencti_note.rst  pycti.entities.opencti_opinion.rst  pycti.entities.opencti_report.rst  pycti.entities.opencti_settings.rst  pycti.entities.opencti_stix_domain_entity.rst  pycti.entities.opencti_stix_entity.rst  pycti.entities.opencti_stix_observable.rst  pycti.entities.opencti_stix_observable_relation.rst  pycti.entities.opencti_stix_relation.rst  pycti.entities.opencti_stix_sighting.rst  pycti.entities.opencti_tag.rst  pycti.entities.opencti_threat_actor.rst  pycti.entities.opencti_tool.rst  pycti.entities.opencti_user.rst  pycti.entities.opencti_vulnerability.rst  pycti.rst  pycti.utils.constants.rst  pycti.utils.opencti_stix2.rst  pycti.utils.rst
client-python/examples/: add_external_reference_to_report.py  add_label_to_malware.py  add_label_to_observable.py  add_organization_to_sector.py  add_tool_usage_to_intrusion-set.py  ask_enrichment_of_observable.py  cmd_line_tag_latest_indicators_of_threat.py  create_campaign_attributed-to_intrusion_set.py  create_file_with_hashes.py  create_incident_with_ttps_and_indicators.py  create_indicator_of_campaign.py  create_intrusion_set.py  create_ip_domain_resolution.py  create_marking_definition.py  create_observable_relationships.py  create_observable_sshkey.py  create_observable_x509_certificate.py  create_process_observable.py  create_security_coverage.py  create_security_coverage_result.py  create_vulnerability.py  delete_intrusion_set.py  delete_observable_sshkey.py  delete_relation.py  export_async_of_indicators.py  export_incident_stix2.py  export_incidents_stix2.py  export_intrusion_set_stix2.py  export_report_stix2.py  get_all_indicators_using_pagination.py  get_all_reports_using_pagination.py  get_attack_pattern_by_mitre_id.py  get_entity_by_name_or_alias.py  get_indicators_of_malware.py  get_malwares_of_intrusion_set.py  get_marking_definitions.py  get_observable_exact_match.py  get_observables_search.py  get_reports_about_intrusion_set.py  get_security_coverage.py  (+14 more)
client-python/pycti/: __init__.py  types.py
client-python/pycti/api/: __init__.py  opencti_api_client.py  opencti_api_connector.py  opencti_api_draft.py  (+9 more)
client-python/scripts/: clone-opencti.sh
client-python/tests/: conftest.py  utils.py
opencti-mcp/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test-requirements.txt
opencti-mcp/tests/: conftest.py  test_cases.py  test_config.py  test_enrichment.py  test_indicators.py  test_investigations.py  test_observables.py  test_relationships.py  test_reports.py  test_search.py  test_server.py  test_stix_export.py
(+17180 files in other folders)
