[metadata]
name = pycti
version = attr: pycti.__version__
author = Filigran
author_email = contact@filigran.io
maintainer = Filigran
url = https://github.com/OpenCTI-Platform/client-python
description = Python API client for OpenCTI.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Natural Language :: French
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
packages =
    pycti
    pycti.api
    pycti.connector
    pycti.entities
    pycti.utils
include_package_data = True
install_requires =
    datefinder~=0.7.3
    pika~=1.3.1
    python-magic~=0.4.27; sys_platform == "linux" or sys_platform == "darwin"
    python-magic-bin~=0.4.14; sys_platform == "win32"
    python_json_logger~=2.0.4
    pyyaml~=6.0
    requests~=2.31.0
    setuptools~=66.1.1
    filigran_sseclient~=1.0.0
    stix2~=3.0.1
    cachetools~=5.3.0

[options.extras_require]
dev =
    black~=23.1.0
    build~=0.10.0
    isort~=5.12.0
    types-pytz~=2022.2.1.0
    pre-commit~=2.21.0
    pytest-cases~=3.6.13
    pytest-cov~=3.0.0
    pytest_randomly~=3.12.0
    pytest~=7.1.2
    types-python-dateutil~=2.8.19
    wheel~=0.40.0
doc =
    autoapi~=2.0.1
    sphinx-autodoc-typehints~=1.23.0
    sphinx-rtd-theme~=1.2.1
