[metadata]
name = pycti
version = attr: pycti.__version__
author = Filigran
author_email = contact@filigran.io
maintainer = Filigran
url = https://github.com/OpenCTI-Platform/opencti
description = Python API client for OpenCTI.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Natural Language :: French
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
packages =
    pycti
    pycti.api
    pycti.connector
    pycti.entities
    pycti.entities.indicator
    pycti.entities.stix_cyber_observable
    pycti.utils
include_package_data = True
install_requires =
    # Filigran
    datefinder~=0.7.3
    pika~=1.3.0
    pydantic>=2.8.2, <3
    python-magic~=0.4.27; sys_platform == 'linux' or sys_platform == 'darwin'
    python-magic-bin~=0.4.14; sys_platform == 'win32'
    python_json_logger~=3.3.0
    PyYAML~=6.0
    requests>=2.32.0, <3
    setuptools~=80.9.0
    cachetools~=6.2.4
    prometheus-client~=0.22.1
    opentelemetry-api~=1.35.0
    opentelemetry-sdk~=1.35.0
    deprecation~=2.1.0
    fastapi>=0.124.0,<0.125.0
    uvicorn[standard]>=0.34.0,<0.36.0
    # OpenCTI
    filigran-sseclient>=1.0.2
    stix2~=3.0.1

[options.extras_require]
dev =
    black~=25.11.0
    build~=1.3.0
    isort~=6.0.0
    types-pytz~=2025.2.0.20250326
    pre-commit~=4.5.0
    pytest-cases~=3.9.1
    pytest-cov~=7.0.0
    pytest_randomly~=4.0.1
    pytest~=8.4.1
    types-python-dateutil~=2.9.0
    wheel~=0.45.1
doc =
    autoapi~=2.0.1
    sphinx-autodoc-typehints~=3.2.0
    sphinx-rtd-theme~=3.0.2
